@@ -145,6 +145,8 @@ o qmail-remote can use credentials stored in remote_auth.cdb using simple or
 80. qlocal_upgrade.in: add env variable AUTOSCAN for svscan if missing
 - 03/12/2022
 81. svctool: do ssl/rsa setup for mysql/mariadb before creating indimail.cnf
+- 07/12/2022
+82. svctool: fixes for MySQL db, ssl certificates creation
 
 * Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.1-1.1%{?dist}
 Release 3.0.1 Start 21/05/2022 End 08/09/2022
